[package]
name = "oxidized_image_processing"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image={ version = "0.24.0" }
num = "0.4"

[profile.release]
debug = true

[[bin]]
name = "oxidized_image_processing"
src = "src/main.rs"

[lib]
name = "oxidized_image_processing"
src = "src/lib.rs"

[[test]]
name = "test"
src = "test/test.rs"